fix(docs): identical spacing for lines with & without diff highlighting

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -352,9 +352,7 @@
         margin-left: calc(var(--spacing) * -8);
       }
 
-      [data-line]:has(+ [data-line].diff),
-      [data-line].diff,
-      [data-line].diff ~ [data-line] {
+      :has([data-line].diff) [data-line] {
         padding-left: calc(var(--spacing) * 8);
       }
 
